--- a/Translations/translation_IT.json
+++ b/Translations/translation_IT.json
@@ -7,7 +7,7 @@
 	],
 	"tempUnitFahrenheit": false,
 	"messages": {
-		"SettingsCalibrationWarning": "Prima di riavvire assicurarsi che la punta e l'impugnatura siano a temperatura ambiente!",
+		"SettingsCalibrationWarning": "Prima di riavviare assicurarsi che la punta e l'impugnatura siano a temperatura ambiente!",
 		"CJCCalibrating": "Calibrazione in corso",
 		"SettingsResetWarning": "Ripristinare le impostazioni iniziali?",
 		"UVLOWarningString": "DC BASSA",
